test/functions/deitz/iterators/test_var_iterator5_error.good
test_var_iterator5_error.chpl:8: error: illegal lvalue in assignment
$CHPL_HOME/modules/internal/ChapelArray.chpl:2238: In function '=':
$CHPL_HOME/modules/internal/ChapelArray.chpl:2240: error: illegal lvalue in assignment
